CP-11 implementing pagination and fixing authorization for users and admins to create measurement